# Information-Board

./: CMakeLists.txt  LICENSE  README.md  SettingsPage.qml  clientdatasender.cpp  clientdatasender.h  deploy-qt-windows.cmake  deploy-qt-windows.cmake.in  main.cpp  main.qml  qml.qrc  weatherparser.cpp  weatherparser.h
qml/common/: Clock.qml  RemoveSliderImagesPopup.qml  TopDrawer.qml
